# nsbackend

./: .env  .gitignore  CELERY_SETUP.md  Dockerfile  Dockerfile.prod  README.md  celery_requirements.txt  db.sqlite3  deploy_ultimate.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh  fix_expired_requests.py  generate_icons.py  host_nginx_proxy.conf  manage.py  pyproject.toml  pytest.ini  requirements copy.txt  requirements.txt  restart_services.sh  sync_dates.py  test_nearby_logic.py
.tmp/: test_logic.py
accounts/: admin.py  ai_utils.py  filters.py  models.py  partitioning.py  performance_tasks.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_profile_address_alter_profile_date_of_birth_and_more.py  0003_profile_catalog_service.py  0004_user_is_verified.py  (+15 more)
audit/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
chat/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
consultations/: urls.py  utils.py  views.py
interactions/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
moderation/: admin.py  ai_utils.py  checkr_client.py  models.py  serializers.py  tasks.py  urls.py  views.py
nginx/: nginx.conf
notifications/: admin.py  consumers.py  fcm_utils.py  models.py  routing.py  serializers.py  tasks.py  urls.py  utils.py  views.py
ns_backend/: asgi.py  cache_utils.py  celery.py  middleware.py  partitioning.py  settings.py  urls.py  utils.py  views.py  wsgi.py
payments/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
public_site/: admin.py  models.py  urls.py  views.py
scripts/: init_partitions.py
services/: admin.py  ai_matching.py  models.py  proposal_email_utils.py  serializers.py  tasks.py  urls.py  views.py
tests/: test_smoke.py
tracking/: consumers.py  routing.py
(+79 files in other folders)
