[tool.poetry]
name = "ns-backend"
version = "0.1.0"
description = "Neighbor Service Backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
amqp = "5.3.1"
anyio = "4.12.1"
asgiref = "3.11.0"
attrs = "25.4.0"
autobahn = "25.12.2"
Automat = "25.4.16"
billiard = "4.2.4"
celery = "5.4.0"
channels = "4.0.0"
channels-redis = "4.2.0"
click = "8.2.1"
cryptography = "46.0.3"
cssselect2 = "0.8.0"
daphne = "4.1.0"
dj-database-url = "3.1.0"
Django = "5.2.9"
django-cors-headers = "4.9.0"
django-encrypted-model-fields = "0.6.5"
django-filter = "25.2"
django-htmx = "1.18.0"
django-redis = "5.4.0"
django-tenants = "3.9.0"
django-unfold = "0.76.0"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.5.1"
drf-spectacular = "0.29.0"
gunicorn = "22.0.0"
h11 = "0.16.0"
html5lib = "1.1"
httpcore = "1.0.9"
httptools = "0.7.1"
httpx = "0.28.1"
hyperlink = "21.0.0"
idna = "3.11"
incremental = "24.11.0"
kombu = "5.6.2"
lxml = "6.0.2"
markdown-it-py = "4.0.0"
numpy = "2.4.1"
openai = "2.15.0"
openpyxl = "3.1.2"
pillow = "12.0.0"
psycopg2-binary = "2.9.11"
py-ubjson = "0.16.1"
pyasn1 = "0.6.1"
pyasn1_modules = "0.4.2"
pycairo = "1.29.0"
PyHanko = "0.32.0"
pyhanko-certvalidator = "0.29.0"
PyJWT = "2.10.1"
pyOpenSSL = "25.3.0"
pypdf = "6.6.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.1.0"
PyYAML = "6.0.3"
qrcode = "8.2"
redis = "5.0.8"
reportlab = "4.4.9"
requests = "2.32.5"
rich = "14.2.0"
rlPyCairo = "0.4.0"
six = "1.17.0"
sqlparse = "0.5.5"
stripe = "14.1.0"
svglib = "1.6.0"
tinycss2 = "1.5.1"
Twisted = "25.5.0"
txaio = "25.12.2"
ujson = "5.11.0"
uvicorn = "0.40.0"
uvloop = "0.22.1"
vine = "5.1.0"
watchfiles = "1.1.1"
websockets = "16.0"
xhtml2pdf = "0.2.17"
zope.interface = "8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
